compilers/ID/cool/regression/BASE_semanttest/formals_incorrect.cl
class Main is 
	main() : Int is 1 end;
end;

class C is
	a : Int;
	b : Bool;

	init(x: Int, z: Bool) : C is
	   begin
		a <- true;
		b <- y;
		self;
           end
	end;

	other(x : SELF_TYPE) : SELF_TYPE is x end;

	another(x : Int, x : Int) : Int is x end;

	andanother(self: Int, self : Int) : SELF_TYPE is self end;
end;
